--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.9.0",
+    "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@semantic-ui-react/css-patch": "^1.0.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindui/react": "^0.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.20.0",
+    "emailjs-com": "^3.2.0",
+    "flowbite": "^1.5.1",
+    "flowbite-react": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
+    "sweetalert2": "^11.4.24",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
