changed skill card style

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -44,7 +44,7 @@
         "type": "WEB APP",
         "title": "My Unsplash",
         "languages": ["Express.js, MongoDB", "React.js", "Redux Toolkit", "Tailwind CSS"],
-        "description": "Front-End solution of Photo-sharing application",
+        "description": "Full-Stack solution of Photo-sharing application",
         "link": "https://github.com/tania0808/my-unsplash"
     }
 ]
